[package]
name = "nya"
version = "0.7.0"
authors = ["Olivia Hugger <olivia@fastmail.com>"]
description = "A simple and small file processor."
repository = "https://github.com/coll/nya"
documentation = "https://docs.rs/nya"
homepage = "https://github.com/coll/nya"
readme = "README.md"
categories = ["filesystem"]
keywords = ["minimal", "processor", "files"]
license = "AGPL-3.0+"

[badges]
travis-ci = { repository = "coll/nya" }

[dependencies]
walkdir = "2.1.4"
globset = "0.4.0"
